XFIRE-606: Use URI Resolver in XFireClientFactoryBean.
git-svn-id: http://svn.codehaus.org/xfire/trunk/xfire@1863 c7d0bf07-ec0d-0410-b2cc-d48fa9be22ba